 plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0-SNAPSHOT'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'dev.rogacki'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

 compileJava {
     options.compilerArgs += ['--enable-preview']
 }

 repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}
